--- a/crates/hanconv-app/locales/app.toml
+++ b/crates/hanconv-app/locales/app.toml
@@ -1,9 +1,29 @@
 _version = 2
 
+[zh]
+zh = "简体中文"
+zh-Hant = "简体中文"
+en = "简体中文"
+
+[zh-Hant]
+zh = "繁體中文"
+zh-Hant = "繁體中文"
+en = "繁體中文"
+
+[en]
+zh = "English"
+zh-Hant = "English"
+en = "English"
+
 [conversion]
 zh = "转换"
 zh-Hant = "轉換"
 en = "Conversion"
+
+[language]
+zh = "语言"
+zh-Hant = "語言"
+en = "Language"
 
 [s2t.source]
 zh = "简体中文"
