--- a/crates/hanconv-app/locales/app.toml
+++ b/crates/hanconv-app/locales/app.toml
@@ -106,16 +106,11 @@ zh-Hant = "版本"
 en = "Version"
 
 [about.Description]
-zh = "描述"
-zh-Hant = "描述"
-en = "Description"
-
-[about.DescriptionText]
 zh = "汉字转换"
 zh-Hant = "漢字轉換"
 en = "Convert between Chinese characters variants."
 
-[about.Repository]
+[help.Repository]
 zh = "仓库"
 zh-Hant = "倉庫"
 en = "Repository"
